--- a/EX70.ipynb
+++ b/EX70.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPe9SQ+vd3V5Z7DiH0iZR5w",
+      "authorship_tag": "ABX9TyMeC6ErqY3qWw2SxKGGpyzH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,22 @@
         "id": "omtcZwg7WAhy"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def Tim_So(s):\n",
+        "  s = s.split()\n",
+        "  lst = []\n",
+        "  for i in s:\n",
+        "    if i.isnumeric():\n",
+        "      lst.append(i)\n",
+        "  return sum(lst)/len(lst)\n",
+        "\n",
+        "s = input()\n",
+        "\n",
+        "Tim_So(s)\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
     }
   ]
 }
