--- a/EX70.ipynb
+++ b/EX70.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMeC6ErqY3qWw2SxKGGpyzH",
+      "authorship_tag": "ABX9TyOFNc0r11bBPewKhVbhkkM6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,18 +28,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "omtcZwg7WAhy"
+        "id": "omtcZwg7WAhy",
+        "outputId": "38585dcc-6895-40a7-f911-0deb9d4a784d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Toi la 42 sinh nam 1924\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "983.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
       "source": [
         "def Tim_So(s):\n",
         "  s = s.split()\n",
         "  lst = []\n",
         "  for i in s:\n",
         "    if i.isnumeric():\n",
-        "      lst.append(i)\n",
+        "      lst.append(float(i))\n",
         "  return sum(lst)/len(lst)\n",
         "\n",
         "s = input()\n",
